Fix cumulative layout shift above the fold

--- a/src/components/MovieCard/MovieCard.module.css
+++ b/src/components/MovieCard/MovieCard.module.css
@@ -12,7 +12,7 @@
   cursor: row-resize;
 }
 
-/* because visually hidden heading (a11y) is the first child */
+/* because visually hidden heading is the first child (a11y related class) */
 .movieCard:nth-child(2) {
   margin-top: 0;
 }
@@ -23,6 +23,7 @@
 
 .movieCard__open {
   composes:      movieCard;
+  min-height:    15rem;
   border-radius: 6px;
 }
 
